# Text_Editor

./: .gitignore  CMakeLists.txt  README.md
shaders/: font-frag.glsl  font-vertex.glsl  fragment_shader.glsl  vertex_shader.glsl
src/: callbacks.cpp  callbacks.hpp  editor.cpp  editor.hpp  glextloader.cpp  glextloader.hpp  glfw_functions.hpp  globals.hpp  initialization.cpp  initialization.hpp  input_processing.cpp  input_processing.hpp  lexer.cpp  lexer.hpp  main.cpp  render.hpp  renderer.cpp  renderer.hpp  shader_processing.cpp  shader_processing.hpp  shader_processingv1.cpp  to_do.txt
